--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "start": "ts-node-dev src/main.ts"
   },
   "dependencies": {
-    "commander": "^7.2.0"
+    "commander": "^7.2.0",
+    "md5": "^2.3.0"
   },
   "devDependencies": {
+    "@types/md5": "^2.3.0",
     "@types/node": "^15.0.2"
   }
 }
